--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -2,6 +2,9 @@
   background-color: #131921;
   display: flex;
   align-items: center;
+  position: sticky;
+  top: 0;
+  z-index: 100;
 }
 
 .logo {
@@ -28,4 +31,43 @@
   background-color: #febd69;
   padding: 5px;
   height: 22px !important;
+}
+
+.navbar_links {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.linktag {
+  text-decoration: none;
+  color: white;
+}
+
+.links_options {
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.line1 {
+  font-size: 11px;
+  font-weight: 500;
+}
+
+.line2 {
+  font-size: 13px;
+  font-weight: 700;
+}
+
+.cart {
+  display: flex;
+  align-items: center;
+}
+
+.cart_count {
+  font-size: 15px;
+  font-weight: 700;
+  margin-left: 10px;
+  margin-right: 10px;
 }
