--- a/src/Components/Payment/Payment.module.css
+++ b/src/Components/Payment/Payment.module.css
@@ -30,3 +30,13 @@
 .details {
   flex: 0.8;
 }
+
+.btn {
+  background-color: #ffd814;
+  border: none;
+  height: 31px;
+  width: 130px;
+  margin-top: 10px;
+  border-radius: 10px;
+  cursor: pointer;
+}
