--- a/src/Components/Products/Products.module.css
+++ b/src/Components/Products/Products.module.css
@@ -12,6 +12,12 @@
   z-index: 1;
 }
 
+.products:hover {
+  box-shadow: 0 8px 50px rgba(0, 0, 0, 0.4);
+  transform: scale(1.05);
+  transition: 0.3s ease-out;
+}
+
 .products > img {
   width: 100%;
   max-height: 200px;
