--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -1,4 +1,4 @@
-.navbar {
+.navbar_up {
   background-color: #131921;
   display: flex;
   align-items: center;
@@ -15,9 +15,27 @@
   margin-right: 20px;
 }
 
+.location {
+  color: white;
+  font-size: 12px;
+  margin: 10px 10px 10px 0;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
 .search_container {
   display: flex;
   flex: 1;
+}
+
+.search_container select {
+  border: none;
+  border-bottom-left-radius: 5px;
+  border-top-left-radius: 5px;
+  padding: 5px;
+  outline: none;
+  background-color: #f3f3f3;
 }
 
 .searchbar {
@@ -31,9 +49,11 @@
   background-color: #febd69;
   padding: 5px;
   height: 22px !important;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 
-.navbar_links {
+.links {
   display: flex;
   justify-content: space-evenly;
 }
@@ -41,6 +61,27 @@
 .linktag {
   text-decoration: none;
   color: white;
+}
+
+.language {
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+  margin-top: 8px;
+}
+
+.language select {
+  width: 40px;
+  height: 20px;
+  background-color: #131921;
+  color: white;
+  border: none;
+  font-weight: bold;
+}
+
+.flag {
+  height: 15px;
+  margin-right: 5px;
 }
 
 .links_options {
@@ -62,12 +103,47 @@
 
 .cart {
   display: flex;
-  align-items: center;
+  position: relative;
+  margin-top: 7px;
+  margin-right: 15px;
 }
 
 .cart_count {
+  position: absolute;
+  top: -15px;
+  left: -2px;
+  color: #febd69;
   font-size: 15px;
   font-weight: 700;
   margin-left: 10px;
   margin-right: 10px;
+}
+
+.navbar_down {
+  background-color: #232f3e;
+  height: 40px;
+}
+
+.menu_all {
+  display: flex;
+  align-items: center;
+  font-weight: 600;
+}
+
+.menu_icon {
+  margin-top: 3px;
+  margin-right: 5px;
+}
+
+.navbar_down ul {
+  display: flex;
+  padding: 5px 0;
+  align-items: center;
+  list-style: none;
+}
+
+.navbar_down ul li {
+  color: white;
+  margin: 0 10px;
+  cursor: pointer;
 }
