--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -4,7 +4,7 @@
   align-items: center;
   position: sticky;
   top: 0;
-  z-index: 100;
+  z-index: 10;
 }
 
 .logo {
@@ -30,6 +30,10 @@
 }
 
 .search_container select {
+  color: rgb(81, 80, 80);
+  font-size: 12px;
+  font-weight: 600;
+  width: fit-content;
   border: none;
   border-bottom-left-radius: 5px;
   border-top-left-radius: 5px;
@@ -106,12 +110,13 @@
   position: relative;
   margin-top: 7px;
   margin-right: 15px;
+  margin-left: 15px;
 }
 
 .cart_count {
   position: absolute;
-  top: -15px;
-  left: -2px;
+  top: -17px;
+  left: -3px;
   color: #febd69;
   font-size: 15px;
   font-weight: 700;
@@ -145,5 +150,65 @@
 .navbar_down ul li {
   color: white;
   margin: 0 10px;
+  cursor: pointer;
+}
+
+.sidebar {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: 100;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.ext_container {
+  height: 100%;
+  width: 380px;
+  background-color: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+  overflow-y: scroll;
+}
+
+.users {
+  background-color: #232f3e;
+  color: white;
+  font-size: 20px;
+  font-weight: 700;
+  padding: 15px;
+  display: flex;
+  align-items: center;
+}
+
+.users_icon {
+  margin: 0 10px;
+  font-size: 30px !important;
+}
+
+.container {
+  /* padding: 10px 0; */
+}
+
+.content {
+  margin: 5px 0;
+  padding: 20px;
+  border-bottom: 1px solid darkgray;
+}
+
+.content h3 {
+  margin: 5px 0;
+  cursor: pointer;
+}
+
+.content ul {
+  list-style: none;
+}
+
+.content ul li {
+  margin: 20px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   cursor: pointer;
 }
