--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -157,6 +157,7 @@
   width: 100%;
   height: 100%;
   position: fixed;
+  top: 0;
   z-index: 100;
   background-color: rgba(0, 0, 0, 0.6);
 }
@@ -165,7 +166,7 @@
   height: 100%;
   width: 380px;
   background-color: white;
-  position: fixed;
+  position: relative;
   top: 0;
   left: 0;
   overflow-y: scroll;
@@ -186,9 +187,9 @@
   font-size: 30px !important;
 }
 
-.container {
-  /* padding: 10px 0; */
-}
+/* .container {
+  padding: 10px 0;
+} */
 
 .content {
   margin: 5px 0;
@@ -198,7 +199,6 @@
 
 .content h3 {
   margin: 5px 0;
-  cursor: pointer;
 }
 
 .content ul {
@@ -206,9 +206,16 @@
 }
 
 .content ul li {
-  margin: 20px 0;
+  margin: 10px 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
   cursor: pointer;
+  width: 100%;
+  padding: 10px 60px 10px 20px;
+  margin-left: -60px;
+}
+
+.content ul li:hover {
+  background-color: rgb(226, 226, 226);
 }
