--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -187,6 +187,15 @@
   font-size: 30px !important;
 }
 
+.close_icon {
+  cursor: pointer;
+  position: absolute;
+  left: 380px;
+  top: 10px;
+  font-size: 2.5rem !important;
+  color: white;
+}
+
 /* .container {
   padding: 10px 0;
 } */
