--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -158,8 +158,14 @@
   height: 100%;
   position: fixed;
   top: 0;
+  left: -100%;
+  transition: left 0.3s ease;
   z-index: 100;
   background-color: rgba(0, 0, 0, 0.6);
+}
+
+.open {
+  left: 0 !important;
 }
 
 .ext_container {
